hard-gists/1329319/run.log
=== Docker Run Log for 1329319 ===
Started at: Mi 29. Okt 12:07:29 CET 2025

[2025-10-29 12:07:30] START: Running container for 1329319
[2025-10-29 12:07:30] SUCCESS: Container 438ed6cfca35f89e83d59d4d87009ba5573f76a31f1764071f4c52f269ac7523 started for 1329319
=== Container logs for 1329319 ===
  File "/snippet.py", line 19
    print 'Specify a test: redis-normal, redis-hashes, memcached'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1329319 ===
[2025-10-29 12:07:32] INFO: Container 438ed6cfca35f89e83d59d4d87009ba5573f76a31f1764071f4c52f269ac7523 has stopped
